Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -11,7 +11,7 @@
       "id": "tt29605391",
       "type": "series",
       "name": "WIND BREAKER Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178680-tA0ZAqw8l0sP.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178680-wxK48CkZn9yT.jpg",
       "description": "Genres: Action, Comedy, Drama\nTags:Delinquents/Gangs/Shounen/Primarily Teen Cast/Male Protagonist/Urban/Transgender/Found Family/LGBTQ+ Themes\nThe second season of <i>WIND BREAKER</i>.<br><br>\n\nWelcome back to Furin High School, an institution infamous for its population of brawny brutes who solve every conflict with a show of strength. Some of the students even formed a group, Bofurin, which protects the town. Haruka Sakura, a first-year student who moved in from out of town, is only interested in one thing: fighting his way to the top! <br><br>\n\n(Source: Crunchyroll, edited)"
     },
     {
@@ -32,7 +32,7 @@
       "id": "tt34119820",
       "type": "series",
       "name": "The Beginning After the End",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183161-vCQ4hTakFiKW.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183161-6uFwjG8vrcAV.jpg",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Magic/Isekai/Male Protagonist\nAfter a mysterious death, King Grey is reborn as Arthur Leywin on the magical continent of Dicathen. Although he enters his second life as a baby, his previous wisdom remains. He begins to master magic and forge his own path as the years go by, seeking to correct the mistakes of his past life. \n<br><br>\n(Source: Crunchyroll)"
     },
     {
@@ -75,7 +75,7 @@
       "type": "series",
       "name": "WITCH WATCH",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180367-GlRuB2lG7Kaa.jpg",
-      "description": "Genres: Comedy, Drama, Fantasy, Romance, Slice of Life\nTags:Magic/Witch/Parody/Male Protagonist/Found Family/Heterosexual/Female Protagonist/Primarily Teen Cast/Shounen/Urban Fantasy/Werewolf/Youkai\nMorihito Otogi, a high school student who comes from a lineage of ogres, enjoys a peaceful, ordinary life until his childhood friend, Nico, moves in with him. Nico is a witch-in-training, and chooses Morihito to be her familiar. While Nico is thrilled to reunite with her old friend and crush, Morihito is tasked with the perilous duty to protect her from a foretold calamity. Between the unpredictable chaos caused by Nico’s magic, and the awkwardness of sharing a home, their lives become a whirlwind of supernatural hijinks and threats.\n<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>WITCH WATCH: WATCH PARTY</b> before the Japanese premiere was pre-screened in advance in theaters on March 16, 2025 in North America by GKIDS Films. <br>\n- Episodes 1-2 + a selection of stories (Cat Scout, Kanshi's Part Time Job Diaries ~ The Side Job ~, and Kan & Nico's Channel) was pre-screened in advance in theaters on March 30, 2025 in Japan. The regular TV broadcast began April 6, 2025.</i>"
+      "description": "Genres: Comedy, Drama, Fantasy, Romance, Slice of Life\nTags:Magic/Witch/Parody/Male Protagonist/Found Family/Heterosexual/Female Protagonist/Primarily Teen Cast/Shounen/Urban Fantasy/Werewolf/Youkai\nMorihito Otogi, a high school student who comes from a lineage of ogres, enjoys a peaceful, ordinary life until his childhood friend, Nico, moves in with him. Nico is a witch-in-training, and chooses Morihito to be her familiar. While Nico is thrilled to reunite with her old friend and crush, Morihito is tasked with the perilous duty to protect her from a foretold calamity. Between the unpredictable chaos caused by Nico’s magic, and the awkwardness of sharing a home, their lives become a whirlwind of supernatural hijinks and threats.\n<br><br>\n(Source: Crunchyroll) <br><br>\n\n<i>Notes: <br>\n- Worldwide premiere of Episodes 1-3 titled as <b>WITCH WATCH: WATCH PARTY</b> before the Japanese premiere was pre-screened in advance in theaters on March 16, 2025 in North America by GKIDS Films and March 22 and 23 in Europe by Animation Digital Network. <br>\n- Episodes 1-2 + a selection of stories (Cat Scout, Kanshi's Part Time Job Diaries ~ The Side Job ~, and Kan & Nico's Channel) was pre-screened in advance in theaters on March 30, 2025 in Japan. The regular TV broadcast began April 6, 2025.</i>"
     },
     {
       "id": "tt35346400",
@@ -88,7 +88,7 @@
       "id": "tt33999377",
       "type": "series",
       "name": "Kowloon Generic Romance",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182814-XCdnK4CIJkAt.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182814-BVSf7NqMRVqi.jpg",
       "description": "Genres: Drama, Mystery, Romance, Sci-Fi, Slice of Life\nTags:Female Protagonist/Heterosexual/Urban/Dystopian/Seinen/Office Lady/Primarily Adult Cast/Historical/Mahjong\nWelcome to Kowloon Walled City: a dystopian townscape where the people are brimming with nostalgia, and where the past, present, and future converge. Amid the hidden emotions and extraordinary daily lives of the men and women working in its confines, a tale of romance begins to unfold for real estate agent Reiko Kujirai—one that feels as familiar as Kowloon itself… \n<br><br>\n(Source: Yen Press) "
     },
     {
@@ -116,7 +116,7 @@
       "id": "tt35636186",
       "type": "series",
       "name": "Black Butler: Emerald Witch Arc",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-OjXBaGEgzMyA.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179054-HmN0Za4T157B.jpg",
       "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i>"
     },
     {
@@ -211,18 +211,18 @@
       "description": "Genres: Drama, Slice of Life\nTags:Female Protagonist/Classic Literature/Rural\nA new adaptation of <i> Akage no Anne (Anne of Green Gables).</i>"
     },
     {
-      "id": "tt35014218",
-      "type": "series",
-      "name": "Kanchigai no Atelier Meister: Eiyuu Party no Moto Zatsuyougakari ga, Jitsu wa Sentou Igai ga SSS Rank Datta to Iu Yoku Aru Hanashi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-SSeg5j1UrMDG.png",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)"
-    },
-    {
       "id": "tt35636155",
       "type": "series",
       "name": "Apocalypse Hotel",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b180675-rEzDdz6F2kYz.png",
       "description": "Genres: \nTags:Post-Apocalyptic/Inn/Robots/Urban\nThe earth where mankind has disappeared and civilization has collapsed.<br><br>\nIn a world of ruined towns and revived nature, one historic hotel remains.<br><br>\n\"0 customers currently staying, 0 customers planning to stay today, 0 homepage views yesterday. Goal not reached.”<br><br>\nThis is the story that unfolds in a hotel where humanity has disappeared.<br><br>\n(Official Website, Translated)"
+    },
+    {
+      "id": "tt35014218",
+      "type": "series",
+      "name": "Kanchigai no Atelier Meister: Eiyuu Party no Moto Zatsuyougakari ga, Jitsu wa Sentou Igai ga SSS Rank Datta to Iu Yoku Aru Hanashi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-SSeg5j1UrMDG.png",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)"
     },
     {
       "id": "tt35508195",
