--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -15,18 +15,18 @@
       "description": "Genres: Action, Comedy, Drama\nTags:Delinquents/Gangs/Shounen/Primarily Teen Cast/Male Protagonist/Urban/Transgender/Found Family/LGBTQ+ Themes\nThe second season of <i>WIND BREAKER</i>.<br><br>\n\nWelcome back to Furin High School, an institution infamous for its population of brawny brutes who solve every conflict with a show of strength. Some of the students even formed a group, Bofurin, which protects the town. Haruka Sakura, a first-year student who moved in from out of town, is only interested in one thing: fighting his way to the top! <br><br>\n\n(Source: Crunchyroll, edited)"
     },
     {
-      "id": "tt33498499",
-      "type": "series",
-      "name": "Slime Taoshite 300-nen, Shiranai Uchi ni Level MAX ni Nattemashita: Sono ni",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-E4iVjwax3pYc.jpg",
-      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Dragons\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>."
-    },
-    {
       "id": "tt28454008",
       "type": "series",
       "name": "Lazarus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167336-hMpEKtKTemuJ.png",
       "description": "Genres: Action, Sci-Fi\nTags:Cyberpunk/Parkour/Urban/Medicine/Male Protagonist/Prison\nThe year is 2052 — an era of unprecedented peace and prosperity prevails across the globe. The reason for this: mankind has been freed from sickness and pain. Nobel Prize winning neuroscientist Dr. Skinner has developed a miracle cure-all drug with no apparent drawbacks called Hapuna. Hapuna soon becomes ubiquitous… and essential. However, soon after Hapuna is officially introduced, Dr. Skinner vanishes.\n<br><br>\nThree years later, the world has moved on. But Dr. Skinner has returned — this time, as a harbinger of doom. Skinner announces that Hapuna has a short half-life. Everyone who has taken it will die approximately three years later. Death is coming for this sinful world — and coming soon.\n<br><br>\nAs a response to this threat, a special task force of 5 agents is gathered from across the world to save humanity from Skinner’s plan. This group is called “Lazarus.” Can they find Skinner and develop a vaccine before time runs out?\n<br><br>\n<i>(Source: Adult Swim)</i>"
+    },
+    {
+      "id": "tt33498499",
+      "type": "series",
+      "name": "Slime Taoshite 300-nen, Shiranai Uchi ni Level MAX ni Nattemashita: Sono ni",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-E4iVjwax3pYc.jpg",
+      "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Dragons\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>."
     },
     {
       "id": "tt34119820",
@@ -123,7 +123,7 @@
       "id": "tt30844357",
       "type": "series",
       "name": "Shoushimin Series 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181182-iMRy4V0GYpZA.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181182-lnlfAByYD7X6.png",
       "description": "Genres: Mystery, Slice of Life\nTags:Detective\nThe second season of <i>Shoushimin Series.</i><br><br>\nThe second season will focus on two new cases from the novel series, adapting the two-part third volume Shuuki Gentei Kuri Kinton Jiken (The Autumn-Exclusive Kuri Kinton Case) and the fifth volume Touki Gentei Bonbon Chocolat Jiken (The Winter-Exclusive Chocolate Bonbons Case).<br><br>\n(Source: MyAnimeList)"
     },
     {
@@ -152,7 +152,7 @@
       "type": "series",
       "name": "Chotto dake Ai ga Omoi Dark Elf ga Isekai kara Oikakete Kita",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180829-jHViG8fIkaIJ.jpg",
-      "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
+      "description": "Genres: Comedy, Ecchi, Fantasy, Romance\nTags:Elf/Tanned Skin/MILF/Yandere/Nudity/Large Breasts/Male Protagonist/Heterosexual/Isekai\nHinata did it. He got reincarnated into another world, took up the mantle of Hero, and slew the dreaded Demon Lord alongside his party of fellow adventurers. As his reward, he’s returned to Earth to resume a normal life. Or it would be if it wasn’t for the fact that his dark elf companion Mariabelle decided to travel to Earth to come and live with him! Now she uses her arcane talents to ward off any potential romantic rivals and capture Hinata’s affection. \n<BR><BR>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt32513973",
@@ -193,7 +193,7 @@
       "id": "tt35436553",
       "type": "series",
       "name": "Rock wa Lady no Tashinami Deshite",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-bCyH6hXUjCcy.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-6FMVc2mdUwJO.jpg",
       "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Yuri/School/LGBTQ+ Themes/Seinen\nLilisa Suzunomiya, who is forced to live a cramped life at a girl's school where genuine ladies gather, is drawn to the sounds coming from the old school building...? The gorgeous and ladylike girls shout with beautiful sparks!"
     },
     {
@@ -242,8 +242,8 @@
       "id": "tt35437319",
       "type": "series",
       "name": "Kanpeki Sugite Kawai-ge ga Nai to Konyaku Haki Sareta Seijo wa Ringoku ni Urareru",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183275-nXxyj2GCPK9d.jpg",
-      "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183275-WtAo77sYDFW8.png",
+      "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Heterosexual\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt34818628",
@@ -312,8 +312,8 @@
       "id": "tt35348180",
       "type": "series",
       "name": "Gorilla no Kami kara Kago sareta Reijou wa Ouritsu Kishidan de Kawaigarareru",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182060-HqXk9LuKqBKa.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:\nIn this world, 16-year-olds receive blessings from various animal gods. The timid count's daughter Sophia Leela is rumored to be quite strong, having received the blessing from the \"Gorilla God.\" Although she wants a peaceful life, people seek her out due to immense power. Ultimately, she is scouted by the royal knights. The promising young knights intently follow Sophia, the strongest girl.<br><br>\n\n(Source: Kadokawa, translated)"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182060-sxg3QZS2zxNu.png",
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist\nIn this world, 16-year-olds receive blessings from various animal gods. The timid count's daughter Sofia Leela is rumored to be quite strong, having received the blessing from the \"Gorilla God.\" Although she wants a peaceful life, people seek her out due to immense power. Ultimately, she is scouted by the royal knights. The promising young knights intently follow Sofia, the strongest girl.<br><br>\n\n(Source: Kadokawa, translated)"
     },
     {
       "id": "tt4834194",
