--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -183,18 +183,18 @@
       "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
-      "id": "tt32779862",
-      "type": "series",
-      "name": "Aru Majo ga Shinu Made",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
-      "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Magic/Witch/Curses\nOn her seventeenth birthday, the apprentice witch Meg learns that she only has one year left to live. Her teacher, the long-lived witch Faust, explains that the only way to undo the death curse is to collect tears of joy and grow the seed of life. To find them, Meg will have to leave the sheltered life she's always known and head out into the world. There will be meetings, partings, and friendships aplenty, and of course many tears. Meg will learn that the most important lessons for a witch are bright, sweet, and somewhat heart-wrenching.<br>\n<br>\n(Source: Yen Press) "
-    },
-    {
       "id": "tt35436553",
       "type": "series",
       "name": "Rock wa Lady no Tashinami Deshite",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-6FMVc2mdUwJO.jpg",
       "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Yuri/School/LGBTQ+ Themes/Seinen\nLilisa Suzunomiya, who is forced to live a cramped life at a girl's school where genuine ladies gather, is drawn to the sounds coming from the old school building...? The gorgeous and ladylike girls shout with beautiful sparks!"
+    },
+    {
+      "id": "tt32779862",
+      "type": "series",
+      "name": "Aru Majo ga Shinu Made",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
+      "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Magic/Witch/Curses\nOn her seventeenth birthday, the apprentice witch Meg learns that she only has one year left to live. Her teacher, the long-lived witch Faust, explains that the only way to undo the death curse is to collect tears of joy and grow the seed of life. To find them, Meg will have to leave the sheltered life she's always known and head out into the world. There will be meetings, partings, and friendships aplenty, and of course many tears. Meg will learn that the most important lessons for a witch are bright, sweet, and somewhat heart-wrenching.<br>\n<br>\n(Source: Yen Press) "
     },
     {
       "id": "tt35436997",
@@ -232,18 +232,18 @@
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)"
     },
     {
-      "id": "tt35508195",
-      "type": "series",
-      "name": "GUILTY GEAR STRIVE: DUAL RULERS",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178046-v2xJl2OjbKB4.jpg",
-      "description": "Genres: Action, Sci-Fi\nTags:Full CGI/LGBTQ+ Themes\nAfter the decline of the once robust fields of science and technology, a new energy source known as magic fuels the modern era. Humanity creates forbidden biological weapons: Gears. Those Gears eventually stand against humanity in a rebellion. Although they manage to overcome in the struggle for survival known as the Crusades, humanity’s losses are so great that even after several decades pass, their emotional wounds remain unable to fully heal. Sin Kiske, the child of a human and a Gear, heads to his father Ky and mother Dizzy’s wedding ceremony. Their wedding breaks the ultimate taboo: a union between a human and a Gear. Even with the world at peace, it took many years for such a ceremony to come to fruition. Despite the complex array of emotions surrounding it, the wedding ceremony is met with blessings. When suddenly, a mysterious girl appears… The fated child inheriting Gear blood–and the mysterious girl who despises Gears. Their meeting would shake the world.<br><br>\n(Source: YouTube Description)"
-    },
-    {
       "id": "tt33332400",
       "type": "series",
       "name": "YAIBA: Samurai Legend",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177476-IVr1phGBgDNl.jpg",
       "description": "Genres: Adventure, Comedy, Fantasy\nTags:Shounen/Samurai/Male Protagonist/Animals\nThe protagonist, Yaiba (Kurogane Yaiba), is a wild samurai boy who trains in the jungle with his father, Kenjuro! By chance, Yaiba returns to Japan, where he meets his rival Takeshi Onimaru, who has the same samurai spirit as Yaiba, in a new training ground.\n<br><br>\nYaiba is living a life of serious competition, but when Onimaru obtains the “Legendary Demon Sword”, he is on a journey full of spectacle and great adventure...!<br><br>\n\n(Source: Crunchyroll News)"
+    },
+    {
+      "id": "tt35508195",
+      "type": "series",
+      "name": "GUILTY GEAR STRIVE: DUAL RULERS",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178046-v2xJl2OjbKB4.jpg",
+      "description": "Genres: Action, Sci-Fi\nTags:Full CGI/LGBTQ+ Themes\nAfter the decline of the once robust fields of science and technology, a new energy source known as magic fuels the modern era. Humanity creates forbidden biological weapons: Gears. Those Gears eventually stand against humanity in a rebellion. Although they manage to overcome in the struggle for survival known as the Crusades, humanity’s losses are so great that even after several decades pass, their emotional wounds remain unable to fully heal. Sin Kiske, the child of a human and a Gear, heads to his father Ky and mother Dizzy’s wedding ceremony. Their wedding breaks the ultimate taboo: a union between a human and a Gear. Even with the world at peace, it took many years for such a ceremony to come to fruition. Despite the complex array of emotions surrounding it, the wedding ceremony is met with blessings. When suddenly, a mysterious girl appears… The fated child inheriting Gear blood–and the mysterious girl who despises Gears. Their meeting would shake the world.<br><br>\n(Source: YouTube Description)"
     },
     {
       "id": "tt35437319",
@@ -258,6 +258,13 @@
       "name": "Nazotoki wa Dinner no Ato de",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184989-9i29Wrdrak11.png",
       "description": "Genres: Comedy, Drama, Mystery\nTags:Detective/Female Protagonist/Butler\nReiko is a rich heiress to a zaibatsu, but she chose to work as a detective. She resents her superior, Kazamatsuri, who always seem to be making illogical deductions that causes murder cases to become cold cases. One day, her butler suddenly announces his retirement, and he chooses Kageyama as his replacement. Reiko realizes that Kageyama's deduction skills are very good after Kageyama solved a seemingly unsolvable mystery.<br><br>\nAfter that, whenever Reiko meets an unsolvable case, she would lay out the details of the case for Kageyama, and he would explain to her how that particular case is solved after dinner. After every case, Kageyama also explains to Reiko some universal truth or human nature that led to each crime being committed.<br><br>\n(Source: Wikipedia)"
+    },
+    {
+      "id": "tt32524709",
+      "type": "series",
+      "name": "Kakushite! Makina-san!!",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177509-LzpyXGnjitvF.jpg",
+      "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
     },
     {
       "id": "tt35351359",
