--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -108,7 +108,7 @@
     {
       "id": "tt32281073",
       "type": "series",
-      "name": "Kijin Gentoushou",
+      "name": "Sword of the Demon Hunter: Kijin Gentosho",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143598-FCvAhQJLllSP.png",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist/Demons/Swordplay/Shrine Maiden/Historical\nIn the Edo period, there was a shrine maiden called \"Itsukihime\" in the mountain village of Kadono. Jinta, a young man who acts as the shrine maiden's guardian despite being a stranger, encounters a mysterious demon who speaks of the far future in the forest where he went to defeat it. From Edo to the Heisei era, this huge Japanese fantasy series follows a demon man who travels through time while continuously questioning the meaning of wielding a sword.<br>\n<br>\n(Source: Crunchyroll News, edited)<br><br>\n<i>\nNotes:<br>\n• The first episode has a runtime of ~1 hour."
     },
@@ -173,14 +173,7 @@
       "type": "series",
       "name": "Ore wa Seikan Kokka no Akutoku Ryoushu! ",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-fGCQJVV1zHP4.png",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist\nIn his last life, Liam lived as a moral, responsible person...but died deep in debt and betrayed by his wife. Reborn into the ruling family of a vast interstellar empire, Liam knows that life is divided into the downtrodden and the ones who do the stomping, so this time he's going to take what he wants and live for himself. But somehow, things refuse to work out that way. Despite doing his best to become a tyrant, Liam's decisions lead to nothing but peace and prosperity for the empire under his rule, and he just gets more and more popular!\n<br><br>\n(Source: Seven Seas Entertainment)"
-    },
-    {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist/Female Harem/Isekai/Space/Politics/Maids\nIn his last life, Liam lived as a moral, responsible person...but died deep in debt and betrayed by his wife. Reborn into the ruling family of a vast interstellar empire, Liam knows that life is divided into the downtrodden and the ones who do the stomping, so this time he's going to take what he wants and live for himself. But somehow, things refuse to work out that way. Despite doing his best to become a tyrant, Liam's decisions lead to nothing but peace and prosperity for the empire under his rule, and he just gets more and more popular!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt35436553",
@@ -188,6 +181,13 @@
       "name": "Rock wa Lady no Tashinami Deshite",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-6FMVc2mdUwJO.jpg",
       "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Yuri/School/LGBTQ+ Themes/Seinen\nLilisa Suzunomiya, who is forced to live a cramped life at a girl's school where genuine ladies gather, is drawn to the sounds coming from the old school building...? The gorgeous and ladylike girls shout with beautiful sparks!"
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
       "id": "tt32779862",
@@ -281,13 +281,6 @@
       "description": "Genres: Fantasy, Slice of Life\nTags:Witch/Primarily Female Cast/Coming of Age/Primarily Teen Cast/Idol/Female Protagonist\nThe anime's story, set in Maebashi City in Gunma Prefecture, is about the coming-of-age story of five high school girls. First year high school student Yuina Akagi lives an ordinary but unsatisfying everyday life. One day, a mysterious frog named Keroppe scouts her and four other girls to become the \"Maebashi Witches.\" Suddenly, a room closet is connected to a mysterious space that brings the girls to a magical flower shop where they sing, dance, and make other people's wishes come true.\n<br><br>\n(Source: ANN)"
     },
     {
-      "id": "tt23844810",
-      "type": "series",
-      "name": "Bye Bye, Earth Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181078-zBCMinL0WhzA.jpg",
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Female Protagonist/Swordplay/Kemonomimi/Magic/Gore/Classical Music/Philosophy/Heterosexual/War\nThe second season of <i>Bye Bye, Earth</i>."
-    },
-    {
       "id": "tt32514593",
       "type": "series",
       "name": "Teogonia",
@@ -295,11 +288,11 @@
       "description": "Genres: Action, Fantasy\nTags:Isekai/Male Protagonist\nHumans fight to protect their land from invading demi-human tribes in relentless battles. As his world is engulfed by intense warfare, Kai, a village boy from Lag, joins the fight to defend all he knows. After Kai’s comrades fall one by one and he’s injured, he suddenly recalls memories from another life. A fantasy tale unfolds as a village boy explores a world of magic, mystery, and heroism.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
-      "id": "tt28400589",
+      "id": "tt23844810",
       "type": "series",
-      "name": "MIRU: Watashi no Mirai",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166373-97U2bjAxD3l7.jpg",
-      "description": "Genres: Adventure, Sci-Fi\nTags:Robots/Environmental/Female Protagonist/Coming of Age/Dystopian\n<i>Confrontation and Harmony between Humans and Nature.</i>\n<br><br>\nIn the distant future, humans create a robot named MIRU capable of traveling through time, visiting various eras, places, and even parallel worlds.\n<br><br>\nUnlike some robots, MIRU isn't equipped with weapons. Instead, it helps people overcome immense obstacles peacefully, encouraging new beginnings without violence.\n<br><br>\nMIRU continuously evolves by interacting with people, learning and growing to assist those struggling to survive.\n<br><br>\nIt listens to their problems and offers support.\n<br><br>\nBy helping others, MIRU sets off a “Butterfly Effect”, of dramatic change guiding society toward a brighter future.\n<br><br>\nWhy was MIRU created? What is its purpose? Can it save the Earth and humanity from a dystopian future?\n<br><br>\n<i>\"The future is in our hands.\"</i>\n<br><br>\n(Official MIRU Site, edited)<br><br>\n<i>Contains:<br>\n1) Episode 079:「スターダストメモリー」 \"Stardust Memory\"<br>\n2) Episode 101: 「The King of the Forest」<br>\n3) Episode 217: 「この世の波風さわぎ」\"Londonderry Air\"<br>\n4) Episode 630: 「Re: MIRU」<br>\n5) Episode 926: 「待ってて、今行く」 \"Wait, I'll Be There\"</i>"
+      "name": "Bye Bye, Earth Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181078-zBCMinL0WhzA.jpg",
+      "description": "Genres: Action, Adventure, Fantasy\nTags:Female Protagonist/Swordplay/Kemonomimi/Magic/Gore/Classical Music/Philosophy/Heterosexual/War\nThe second season of <i>Bye Bye, Earth</i>."
     },
     {
       "id": "tt35437053",
@@ -307,6 +300,13 @@
       "name": "Chuuzenji-sensei Mononoke Kougiroku: Sensei ga Nazo wo Toiteshimau kara.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182419-6l9Cb3tNseZr.png",
       "description": "Genres: Mystery, Psychological, Supernatural\nTags:Shounen\nOur setting is in Tokyo in 1948, just right after the war. Kanna Kusakabe had just become a second-year at a high school when she meets the new language teacher, Akihiko Chuuzenji.<br><br>\n\nMysterious supernatural things keep happening around Kanna. Once again today, Kanna is going to open the doors to the library prep room to seek help from the surly Chuuzenji-sensei who is waiting inside.<br><br>\n\nA high school supernatural mystery featuring the unlikely duo between a teacher and a high school girl is about to begin!<br><br>\n\n(Source: Pony Canyon, edited)"
+    },
+    {
+      "id": "tt28400589",
+      "type": "series",
+      "name": "MIRU: Watashi no Mirai",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166373-97U2bjAxD3l7.jpg",
+      "description": "Genres: Adventure, Sci-Fi\nTags:Robots/Environmental/Female Protagonist/Coming of Age/Dystopian\n<i>Confrontation and Harmony between Humans and Nature.</i>\n<br><br>\nIn the distant future, humans create a robot named MIRU capable of traveling through time, visiting various eras, places, and even parallel worlds.\n<br><br>\nUnlike some robots, MIRU isn't equipped with weapons. Instead, it helps people overcome immense obstacles peacefully, encouraging new beginnings without violence.\n<br><br>\nMIRU continuously evolves by interacting with people, learning and growing to assist those struggling to survive.\n<br><br>\nIt listens to their problems and offers support.\n<br><br>\nBy helping others, MIRU sets off a “Butterfly Effect”, of dramatic change guiding society toward a brighter future.\n<br><br>\nWhy was MIRU created? What is its purpose? Can it save the Earth and humanity from a dystopian future?\n<br><br>\n<i>\"The future is in our hands.\"</i>\n<br><br>\n(Official MIRU Site, edited)<br><br>\n<i>Contains:<br>\n1) Episode 079:「スターダストメモリー」 \"Stardust Memory\"<br>\n2) Episode 101: 「The King of the Forest」<br>\n3) Episode 217: 「この世の波風さわぎ」\"Londonderry Air\"<br>\n4) Episode 630: 「Re: MIRU」<br>\n5) Episode 926: 「待ってて、今行く」 \"Wait, I'll Be There\"</i>"
     },
     {
       "id": "tt34853325",
