Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -40,7 +40,7 @@
       "type": "series",
       "name": "Kono Subarashii Sekai ni Shukufuku wo! 3: BONUS STAGE",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181244-ICHU0FzIhEAY.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Chuunibyou/Gods/Isekai/Male Protagonist/Ensemble Cast/Primarily Female Cast\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Redstream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Beware of imposters!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025 before being released via Blu-ray/DVD."
+      "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy\nTags:Chuunibyou/Gods/Isekai/Male Protagonist/Ensemble Cast/Primarily Female Cast\nAnnounced during the Konosuba Radio public recording special: OVA episodes for the third season of <i>Kono Subarashii Sekai ni Shukufuku wo!</i><br><br>\n<b>Episodes:</b><br>\n\n1) <b><i>Redstream Explosion!</i></b><br>\nWhile Kazuma and his mates are having dinner at the guild, Luna, a receptionist, brings them a request. They need Megumin's explosion spell to face a typhoon approaching the city of Axel. Yunyun and Wiz also decide to participate, and the morale of the adventurers soars! On the day of the decisive battle, Kazuma sees the adventurers preparing for battle, and is surprised to find that they were all...<br><br>\n\n2) <b><i>Nisemono Chuui! (Beware of imposters!)</b></i><br>\nOne winter day. While Kazuma was enjoying a grilled skewer at a food stall in the town of Axel, an adventurer approached him. The man said he was looking for an adventurer named “Kazuma Satou.\" In exchange for dinner, Kazuma told them the legend of “Kazuma Satou,” which moved the man and his party of three female adventurers to tears...\n\n<br><br>(Source: Crunchyroll News, edited) <br><br>\n<i>Note: The anime was pre-screened in Japan theatrically for 2 weeks starting on March 14, 2025.</i>"
     },
     {
       "id": "tt16341212",
@@ -183,18 +183,18 @@
       "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Yuri/School/LGBTQ+ Themes/Seinen\nLilisa Suzunomiya, who is forced to live a cramped life at a girl's school where genuine ladies gather, is drawn to the sounds coming from the old school building...? The gorgeous and ladylike girls shout with beautiful sparks!"
     },
     {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
-    },
-    {
       "id": "tt32779862",
       "type": "series",
       "name": "Aru Majo ga Shinu Made",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
       "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Magic/Witch/Curses\nOn her seventeenth birthday, the apprentice witch Meg learns that she only has one year left to live. Her teacher, the long-lived witch Faust, explains that the only way to undo the death curse is to collect tears of joy and grow the seed of life. To find them, Meg will have to leave the sheltered life she's always known and head out into the world. There will be meetings, partings, and friendships aplenty, and of course many tears. Meg will learn that the most important lessons for a witch are bright, sweet, and somewhat heart-wrenching.<br>\n<br>\n(Source: Yen Press) "
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
       "id": "tt35436997",
@@ -204,18 +204,18 @@
       "description": "Genres: Comedy, Slice of Life\nTags:School Club/Photography/Cute Girls Doing Cute Things/Female Protagonist\nThe <i>mono</i> manga is centered around high school girls who belong to the Cinephoto Club, which is a combination photography club and video research club set around Kofu City, Yamanashi Prefecture. The girls go about their daily lives using cameras tied to kites, action cameras and even drones around the city and prefecture. <br><br> (Source: Crunchyroll News, edited)"
     },
     {
-      "id": "tt35437780",
-      "type": "series",
-      "name": "Zatsu Tabi: That's Journey",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-DqtBiIGw8ER4.jpg",
-      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Seinen\nChika Suzugamori, a rookie manga artist, has been getting rejected every time she submits a new draft. On the verge of giving up, she suddenly gets the idea of going on a journey.\n<br><br>\n<i>*Based on the real life travels of mangaka Chika Suzugamori.</i>"
-    },
-    {
       "id": "tt35636155",
       "type": "series",
       "name": "Apocalypse Hotel",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b180675-rEzDdz6F2kYz.png",
       "description": "Genres: \nTags:Post-Apocalyptic/Inn/Robots/Urban\nThe earth where mankind has disappeared and civilization has collapsed.<br><br>\nIn a world of ruined towns and revived nature, one historic hotel remains.<br><br>\n\"0 customers currently staying, 0 customers planning to stay today, 0 homepage views yesterday. Goal not reached.”<br><br>\nThis is the story that unfolds in a hotel where humanity has disappeared.<br><br>\n(Official Website, Translated)"
+    },
+    {
+      "id": "tt35437780",
+      "type": "series",
+      "name": "Zatsu Tabi: That's Journey",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-DqtBiIGw8ER4.jpg",
+      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Seinen\nChika Suzugamori, a rookie manga artist, has been getting rejected every time she submits a new draft. On the verge of giving up, she suddenly gets the idea of going on a journey.\n<br><br>\n<i>*Based on the real life travels of mangaka Chika Suzugamori.</i>"
     },
     {
       "id": "tt34702901",
@@ -335,6 +335,13 @@
       "name": "Yu-Gi-Oh! CARD GAME: THE CHRONICLES (2025)",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186151-IrCQ48VPiVVz.png",
       "description": "Genres: Action, Fantasy\nTags:Card Battle\nYu-Gi-Oh! CARD GAME THE CHRONICLES is a monthly short-anime series showcasing Official Card Game-original card themes. It is an expansion of the demo reel of the same name released the previous year."
+    },
+    {
+      "id": "tt36132068",
+      "type": "series",
+      "name": "Hibi wa Sugiredo Meshi Umashi",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-viWEQ3OvnTrS.jpg",
+      "description": "Genres: Slice of Life\nTags:Female Protagonist/Food/Primarily Female Cast\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
       "id": "tt35331840",
