--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -1,7 +1,7 @@
 {
   "metas": [
     {
-      "id": "tt9307686",
+      "id": "tt16163536",
       "type": "series",
       "name": "Fire Force Season 3",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx149118-AOQb0xuTssGl.jpg",
@@ -178,9 +178,9 @@
     {
       "id": "tt35436553",
       "type": "series",
-      "name": "Rock wa Lady no Tashinami Deshite",
+      "name": "Rock is a Lady’s Modesty",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179694-6FMVc2mdUwJO.jpg",
-      "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Yuri/School/LGBTQ+ Themes/Seinen\nLilisa Suzunomiya, who is forced to live a cramped life at a girl's school where genuine ladies gather, is drawn to the sounds coming from the old school building...? The gorgeous and ladylike girls shout with beautiful sparks!"
+      "description": "Genres: Drama, Music\nTags:Rock Music/Female Protagonist/Ojou-sama/Yuri/School/LGBTQ+ Themes/Seinen\nAt an elite all-girls' academy where refined young ladies gather, Lilisa Suzunomiya, now the daughter of a real estate tycoon after her mother remarried, is forced to abandon her guitar and rock music to fit in. However, her passion is reignited by sounds from the old school building, where she meets a skilled drummer who shares her love for rock. Together, they embrace their inner rockstars, elegantly clashing and shouting their way through the academy in this captivating tale of grace and rebellion.\n<br><br>\n(Source: HIDIVE)"
     },
     {
       "id": "tt32779862",
@@ -330,18 +330,11 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist/Shoujo\nIn this world, 16-year-olds receive blessings from various animal gods. The timid count's daughter Sofia Leela is rumored to be quite strong, having received the blessing from the \"Gorilla God.\" Although she wants a peaceful life, people seek her out due to immense power. Ultimately, she is scouted by the royal knights. The promising young knights intently follow Sofia, the strongest girl.<br><br>\n\n(Source: Kadokawa, translated)"
     },
     {
-      "id": "tt4834194",
-      "type": "series",
-      "name": "Yu-Gi-Oh! CARD GAME: THE CHRONICLES (2025)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186151-IrCQ48VPiVVz.png",
-      "description": "Genres: Action, Fantasy\nTags:Card Battle\nYu-Gi-Oh! CARD GAME THE CHRONICLES is a monthly short-anime series showcasing Official Card Game-original card themes. It is an expansion of the demo reel of the same name released the previous year."
-    },
-    {
       "id": "tt36132068",
       "type": "series",
       "name": "Hibi wa Sugiredo Meshi Umashi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-viWEQ3OvnTrS.jpg",
-      "description": "Genres: Slice of Life\nTags:Female Protagonist/Food/Primarily Female Cast\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-sab8ngzZO1ir.jpg",
+      "description": "Genres: Slice of Life\nTags:Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
       "id": "tt35331840",
