Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -61,7 +61,7 @@
       "type": "series",
       "name": "Haite Kudasai, Takamine-san",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179965-fkPzvBjP4paF.jpg",
-      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Nudity/Heterosexual/Tsundere/Bullying/Femdom/School/Large Breasts/Female Protagonist/Male Protagonist/Shounen/Slavery\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
+      "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Nudity/Femdom/Large Breasts/Heterosexual/Tsundere/Bullying/Slavery/Female Protagonist/School/Male Protagonist/Shounen\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
     },
     {
       "id": "tt28082379",
@@ -172,7 +172,7 @@
       "id": "tt34814625",
       "type": "series",
       "name": "Ore wa Seikan Kokka no Akutoku Ryoushu! ",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-fGCQJVV1zHP4.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-zqrwevS4PBJF.jpg",
       "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist/Female Harem/Isekai/Space/Politics/Maids\nIn his last life, Liam lived as a moral, responsible person...but died deep in debt and betrayed by his wife. Reborn into the ruling family of a vast interstellar empire, Liam knows that life is divided into the downtrodden and the ones who do the stomping, so this time he's going to take what he wants and live for himself. But somehow, things refuse to work out that way. Despite doing his best to become a tyrant, Liam's decisions lead to nothing but peace and prosperity for the empire under his rule, and he just gets more and more popular!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
@@ -253,18 +253,18 @@
       "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Heterosexual\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
-      "id": "tt34818628",
-      "type": "series",
-      "name": "Nazotoki wa Dinner no Ato de",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184989-9i29Wrdrak11.png",
-      "description": "Genres: Comedy, Drama, Mystery\nTags:Detective/Female Protagonist/Butler\nReiko is a rich heiress to a zaibatsu, but she chose to work as a detective. She resents her superior, Kazamatsuri, who always seem to be making illogical deductions that causes murder cases to become cold cases. One day, her butler suddenly announces his retirement, and he chooses Kageyama as his replacement. Reiko realizes that Kageyama's deduction skills are very good after Kageyama solved a seemingly unsolvable mystery.<br><br>\nAfter that, whenever Reiko meets an unsolvable case, she would lay out the details of the case for Kageyama, and he would explain to her how that particular case is solved after dinner. After every case, Kageyama also explains to Reiko some universal truth or human nature that led to each crime being committed.<br><br>\n(Source: Wikipedia)"
-    },
-    {
       "id": "tt32524709",
       "type": "series",
       "name": "Kakushite! Makina-san!!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177509-LzpyXGnjitvF.jpg",
       "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
+    },
+    {
+      "id": "tt34818628",
+      "type": "series",
+      "name": "Nazotoki wa Dinner no Ato de",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184989-9i29Wrdrak11.png",
+      "description": "Genres: Comedy, Drama, Mystery\nTags:Detective/Female Protagonist/Butler\nReiko is a rich heiress to a zaibatsu, but she chose to work as a detective. She resents her superior, Kazamatsuri, who always seem to be making illogical deductions that causes murder cases to become cold cases. One day, her butler suddenly announces his retirement, and he chooses Kageyama as his replacement. Reiko realizes that Kageyama's deduction skills are very good after Kageyama solved a seemingly unsolvable mystery.<br><br>\nAfter that, whenever Reiko meets an unsolvable case, she would lay out the details of the case for Kageyama, and he would explain to her how that particular case is solved after dinner. After every case, Kageyama also explains to Reiko some universal truth or human nature that led to each crime being committed.<br><br>\n(Source: Wikipedia)"
     },
     {
       "id": "tt35351359",
