Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "Moonrise",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx150654-DjqOv8Md8yTI.jpg",
-      "description": "Genres: Action, Fantasy, Sci-Fi\nTags:CGI/Space/Male Protagonist\n“Moonrise” takes place in the near future and will be set in both the Moon and on Earth. WIT STUDIO will join forces with Mr. Ubukata, who is known for the popular series of “Mardock Scramble” (Winner of the Nihon SF Taisho Award) and the historical novel “The Universe Revealed” (Winner of the Booksellers Award).<br><br>\n\"Moonrise\" will portray the lives of two men, Jack and Phil, as they confront various hardships in the vast world of outer space. All action and scenery in the unexplored parts of the Moon will be illustrated using an innovative type of animation unlike any seen before.<br><br>\n(Source: Netflix, Anime News Network, edited)"
+      "description": "Genres: Action, Fantasy, Sci-Fi\nTags:CGI/Space/Male Protagonist\n In a not-too-distant future, humanity has established a loosely organized world government with everything managed by an international AI network called Sapientia. People live peaceful lives by loyally obeying its rational decisions. However, Sapientia’s lunar development project, which sends criminals and pollutants to the Moon to maintain Earth’s peace, creates disparity and poverty on the Moon, sparking a catalyst for war. Jacob \"Jack\" Shadow gets caught up in this conflict after losing his family to a terrorist bombing by the Moon's rebel army. Vowing revenge, Jack joins the Earth army as a scout on the Moon, only to discover an unexpected leader among the resistance forces. <br><br>\n(Source: Netflix)"
     },
     {
       "id": "tt32513973",
@@ -246,18 +246,18 @@
       "description": "Genres: Action, Sci-Fi\nTags:Full CGI/LGBTQ+ Themes\nAfter the decline of the once robust fields of science and technology, a new energy source known as magic fuels the modern era. Humanity creates forbidden biological weapons: Gears. Those Gears eventually stand against humanity in a rebellion. Although they manage to overcome in the struggle for survival known as the Crusades, humanity’s losses are so great that even after several decades pass, their emotional wounds remain unable to fully heal. Sin Kiske, the child of a human and a Gear, heads to his father Ky and mother Dizzy’s wedding ceremony. Their wedding breaks the ultimate taboo: a union between a human and a Gear. Even with the world at peace, it took many years for such a ceremony to come to fruition. Despite the complex array of emotions surrounding it, the wedding ceremony is met with blessings. When suddenly, a mysterious girl appears… The fated child inheriting Gear blood–and the mysterious girl who despises Gears. Their meeting would shake the world.<br><br>\n(Source: YouTube Description)"
     },
     {
-      "id": "tt35437319",
-      "type": "series",
-      "name": "Kanpeki Sugite Kawai-ge ga Nai to Konyaku Haki Sareta Seijo wa Ringoku ni Urareru",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183275-WtAo77sYDFW8.png",
-      "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Heterosexual\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
-    },
-    {
       "id": "tt32524709",
       "type": "series",
       "name": "Kakushite! Makina-san!!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx177509-LzpyXGnjitvF.jpg",
       "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
+    },
+    {
+      "id": "tt35437319",
+      "type": "series",
+      "name": "Kanpeki Sugite Kawai-ge ga Nai to Konyaku Haki Sareta Seijo wa Ringoku ni Urareru",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183275-WtAo77sYDFW8.png",
+      "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Heterosexual\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
     },
     {
       "id": "tt34818628",
@@ -274,18 +274,18 @@
       "description": "Genres: Comedy\nTags:Female Protagonist/Ninja/Assassins/Primarily Female Cast/LGBTQ+ Themes/Shounen\nThe story of <i>Ninja to Koroshiya no Futarigurashi</i> follows Satoko, a ninja who escapes from her village and is saved by a passing high school girl, Konoha, when she collapses in the city. Satoko's pursuers close in, but much to their and Satoko's surprise, Konoha holds her own against them — since her true identity is that of an assassin.\n<br><br>\n(Source: Crunchyroll News)"
     },
     {
-      "id": "tt35351289",
-      "type": "series",
-      "name": "Maebashi Witches",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180825-trzjP1VDF19U.jpg",
-      "description": "Genres: Fantasy, Slice of Life\nTags:Witch/Primarily Female Cast/Coming of Age/Primarily Teen Cast/Idol/Female Protagonist\nThe anime's story, set in Maebashi City in Gunma Prefecture, is about the coming-of-age story of five high school girls. First year high school student Yuina Akagi lives an ordinary but unsatisfying everyday life. One day, a mysterious frog named Keroppe scouts her and four other girls to become the \"Maebashi Witches.\" Suddenly, a room closet is connected to a mysterious space that brings the girls to a magical flower shop where they sing, dance, and make other people's wishes come true.\n<br><br>\n(Source: ANN)"
-    },
-    {
       "id": "tt32514593",
       "type": "series",
       "name": "Teogonia",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176702-SQUbWQGVVQ7Z.jpg",
       "description": "Genres: Action, Fantasy\nTags:Isekai/Male Protagonist\nHumans fight to protect their land from invading demi-human tribes in relentless battles. As his world is engulfed by intense warfare, Kai, a village boy from Lag, joins the fight to defend all he knows. After Kai’s comrades fall one by one and he’s injured, he suddenly recalls memories from another life. A fantasy tale unfolds as a village boy explores a world of magic, mystery, and heroism.<br>\n<br>\n(Source: Crunchyroll)"
+    },
+    {
+      "id": "tt35351289",
+      "type": "series",
+      "name": "Maebashi Witches",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180825-trzjP1VDF19U.jpg",
+      "description": "Genres: Fantasy, Slice of Life\nTags:Witch/Primarily Female Cast/Coming of Age/Primarily Teen Cast/Idol/Female Protagonist\nThe anime's story, set in Maebashi City in Gunma Prefecture, is about the coming-of-age story of five high school girls. First year high school student Yuina Akagi lives an ordinary but unsatisfying everyday life. One day, a mysterious frog named Keroppe scouts her and four other girls to become the \"Maebashi Witches.\" Suddenly, a room closet is connected to a mysterious space that brings the girls to a magical flower shop where they sing, dance, and make other people's wishes come true.\n<br><br>\n(Source: ANN)"
     },
     {
       "id": "tt23844810",
@@ -334,7 +334,7 @@
       "type": "series",
       "name": "Hibi wa Sugiredo Meshi Umashi",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-sab8ngzZO1ir.jpg",
-      "description": "Genres: Slice of Life\nTags:Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
+      "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
       "id": "tt35331840",
