Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -4,7 +4,7 @@
       "id": "kitsu:49215",
       "type": "movie",
       "name": "Kobayashi-san Chi no Maidragon Samishii Gariya no Ryuu",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181839-oNulf7nWUrPp.png",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181839-pgM02tCNM2ae.png",
       "behaviorHints": {
         "defaultVideoId": "kitsu:49215"
       },
@@ -38,7 +38,7 @@
       "behaviorHints": {
         "defaultVideoId": "tt35419807"
       },
-      "description": "Genres: Comedy, Slice of Life\nTags:Robots/Shounen/Maids\nnull"
+      "description": "Genres: Comedy, Slice of Life\nTags:Maids/Shounen/Robots\nnull"
     },
     {
       "id": "tt35652362",
